address coments
Signed-off-by: Sam Kramer <sam.c.kramer@gmail.com>